--- a/index.html
+++ b/index.html
@@ -6,11 +6,28 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GPC</title>
+    <meta
+    name="description"
+    content="GPC, one of the largest pharmaceutical companies in Georgia, was established in 1995. Nowadays GPC comprises nearly 110 pharmacies all around of Georgia.
+    "
+  />
+  <meta name="keywords" content="GPC, pharmacy" />
+  <meta name="author" content="Maggie" />
+  <meta property="og:url" content="#" />
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="GPC" />
+  <meta
+    property="og:description"
+    content="GPC, one of the largest pharmaceutical companies in Georgia, was established in 1995. Nowadays GPC comprises nearly 110 pharmacies all around of Georgia.
+    "
+  />
+  <meta property="og:image" content="img/slider2.jpeg" />
+
+    
     <link rel="stylesheet" href="css/reset.css" />
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/responsive.css" />
     <link rel="stylesheet" href="//cdn.web-fonts.ge/fonts/bpg-nino-mtavruli/css/bpg-nino-mtavruli.min.css">
-    <!-- <link rel="stylesheet" href="/path/to/bpg-square.min.css"> -->
     <script src="https://kit.fontawesome.com/6de6aa5275.js" crossorigin="anonymous"></script>
     <link rel="icon" href="img/tab.png" type="image/gif" sizes="16x16" />
 </head>
